syntax = "proto3";

package greet;
option go_package = "/greet/greetpb";

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

message GreetingRequest{
Greeting greeting = 1;
}
message GreetingResponse{
 string result = 1;
}

message GreetingManyTimesRequest{
  Greeting greeting = 1;
}

message  GreetingManyTimesResponse{
  string result = 1;
}

message LongGreetingRequest{
  Greeting greeting = 1;
}

message  LongGreetingResponse{
  string result = 1;
}

message GreetEveryoneRequest{
  Greeting greeting = 1;
}

message GreetEveryoneReponse{
  string result = 1;
}


service GreetService{
  //Unary
  rpc Greet(GreetingRequest) returns (GreetingResponse){};

  //Server Streaming
  rpc GreetManyTimes(GreetingManyTimesRequest) returns (stream GreetingManyTimesResponse) {};

  //Client Streaming
  rpc LongGreet ( stream LongGreetingRequest) returns (LongGreetingResponse){};

  //Bi-directional Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest) returns (stream GreetEveryoneReponse){};
}


